tdf#135906 docxexport: set serializer before writing

This fixes a 6.3 regresssion from
commit aafaf1f55fa413ad49d4556cf7c0a713dd206ae4.

Change-Id: Ia2d3d26fe2cfa2b213326021f6b97f8d40c6e98c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125441
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125537